# filter-service

./: .gitignore  .gitlab.ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: read_me.md
env/: .env.example
src/app/: main.py
src/app/api/: router.py
src/app/api/routes/: health.py
src/app/core/: logger.py
src/app/core/di/: provider.py
src/app/domain/: entities.py
src/app/domain/use_case/: handle_image_processed_event.py  process_image.py
src/filter_service/: main.py
src/filter_service/core/: config.py  observability.py
src/filter_service/core/di/: provider.py
src/filter_service/domain/: entities.py
src/filter_service/domain/use_case/: handle_image_processed_event.py  process_image.py
tests/: conftest.py
tests/integration/: conftest.py
tests/unit/: conftest.py
